--- a/Booking.html
+++ b/Booking.html
@@ -10,10 +10,12 @@
 <meta property="og:url" content="https://www.blochotels.com/booking_process.php"/>  
 <meta property="og:title" content="Booking"/>
 <meta property="og:website"/>
+<meta property="og:description" content=""/>  
 <meta property="og:image" content="https://www.blochotels.com/images/social/social_media.jpg"/> 
 <link rel="icon" type="image/png" sizes="32x32" href="https://www.beds24.com/favicon2.ico"/>
 <link href="./Booking_files/base-1527769159.css" rel="stylesheet" type="text/css" media="screen, print"/>
 <script type="text/javascript" async="" src="./Booking_files/analytics.js"></script><script type="text/javascript" async="" src="./Booking_files/tracking.js"></script><script defer="" type="text/javascript" src="./Booking_files/base-booking_process.php-1524058348.js"></script>
+		<script async="" src="./Booking_files/js"></script> 
 		<script> 
 		window.dataLayer = window.dataLayer || []; 
 		function gtag(){dataLayer.push(arguments);} 
